--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "gemini-schedule-demo",
   "version": "1.0.0",
-  "description": "A demo application showing how to use Google's Gemini API to create student schedules",
-  "main": "dist/dayplanner-tests.js",
+  "description": "A demo application showing how to use Google's Gemini API to create captions for posts",
+  "main": "dist/birdposting-tests.js",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node dist/dayplanner-tests.js",
-    "dev": "ts-node --transpile-only dayplanner-tests.ts",
-    "test": "npm run build && node dist/dayplanner-tests.js",
-    "manual": "npm run build && node -e \"require('./dist/dayplanner-tests.js').testManualScheduling()\"",
-    "llm": "npm run build && node -e \"require('./dist/dayplanner-tests.js').testLLMScheduling()\"",
-    "mixed": "npm run build && node -e \"require('./dist/dayplanner-tests.js').testMixedScheduling()\""
+    "start": "npm run build && node dist/birdposting-tests.js",
+    "dev": "ts-node --transpile-only birdposting-tests.ts",
+    "test": "npm run build && node dist/birdposting-tests.js",
+    "manual": "npm run build && node -e \"require('./dist/birdposting-tests.js').testManualPosting()\"",
+    "llm": "npm run build && node -e \"require('./dist/birdposting-tests.js').testLLMAugmentation()\"",
+    "mixed": "npm run build && node -e \"require('./dist/birdposting-tests.js').testMixedEditing()\"",
+    "vague": "npm run build && node -e \"require('./dist/birdposting-tests.js').testVagueDraftCaption()\"",
+    "casual": "npm run build && node -e \"require('./dist/birdposting-tests.js').testCasualCaption()\"",
+    "sad": "npm run build && node -e \"require('./dist/birdposting-tests.js').testSadderCaption()\""
   },
-  "keywords": ["gemini", "ai", "schedule", "student", "demo", "typescript"],
+  "keywords": ["gemini", "ai", "birds", "posts", "demo", "typescript"],
   "author": "Student Demo",
   "license": "MIT",
   "dependencies": {
